test/compile-fail/resolution/pub/in-root-super/expected.txt
error: there are too many leading `super` keywords
 --> top.rhdl:1:7
  |
1 | pub(in super) struct a {}
  |        ^^^^^ goes beyond the crate root
